--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">PruebaKotlin</string>
-    <string name="firstAppearance">TextView</string>
+    <string name="name">TextView</string>
+    <string name="idhero">TextView</string>
     <string name="fullname">TextView</string>
 </resources>
